--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>Shaikh Minhaj</title>
+	<title>Portfólio</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -29,7 +29,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container box_1620">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html">Portfolio</a>
+					<a class="navbar-brand logo_h" href="index.html">Portfólio</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse"
 						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
@@ -40,29 +40,11 @@
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 						<ul class="nav navbar-nav menu_nav ml-auto" >
-							<li class="nav-item active" ><a class="nav-link" href="index.html" ><span id="nav_btn_hover">Home</span></a></li>
+							<li class="nav-item active" ><a class="nav-link" href="#home" ><span id="nav_btn_hover">Home</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="#about"><span id="nav_btn_hover">Sobre</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="services.html"><span id="nav_btn_hover">Projetos</span></a>
-							<!-- <li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-									aria-haspopup="true" aria-expanded="false"><span id="nav_btn_hover">Pages</span></a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="portfolio.html"><span id="nav_btn_hover">Portfolio</span></a></li>
-									<li class="nav-item"><a class="nav-link" href="portfolio-details.html"><span id="nav_btn_hover">Project</span>
-											Details</a></li>
-									<li class="nav-item"><a class="nav-link" href="elements.html"><span id="nav_btn_hover">Elements</span></a></li>
-								</ul>
-							</li> -->
-							<!-- <li class="nav-item submenu dropdown">
-								<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button"
-									aria-haspopup="true" aria-expanded="false"><span id="nav_btn_hover">Blog</span></a>
-								<ul class="dropdown-menu">
-									<li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-									<li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a>
-									</li>
-								</ul>
-							</li> -->
+							<li class="nav-item"><a class="nav-link" href="#projects"><span id="nav_btn_hover">Projetos</span></a>
 							<li class="nav-item"><a class="nav-link" href="contact.html"><span id="nav_btn_hover">Contato</span></a></li>
+							<li class="nav-item"><a class="nav-link" href=""><span id="nav_btn_hover">Currículo</span></a>
 						</ul>
 					</div>
 				</div>
@@ -72,7 +54,7 @@
 	<!--================Header Menu Area =================-->
 
 	<!--================Home Banner Area =================-->
-	<section class="home_banner_area">
+	<section id="home" class="home_banner_area">
 		<div class="banner_inner">
 			<div class="container">
 				<div class="row">
@@ -84,10 +66,10 @@
 					<div class="col-lg-6">
 						<div class="banner_content">
 							<h5>This is me</h5>
-							<h2>Shaikh Minhaj</h2>
-							<p>I am a Full Stack Developer | Web Developer & Designer | Open-Source Contributor |
-								Freelancer</p>
-							<a class="banner_btn" href="https://github.com/minhaj-313">Github</a>
+							<h2>Matheus Nicolay</h2>
+							<p>Eu sou um SysAdmin | DevOps | Sre |
+								Analista de infraestrutura</p>
+							<a class="banner_btn" href="https://github.com/matheus-nicolay">Github</a>
 						</div>
 					</div>
 				</div>
@@ -102,7 +84,7 @@
 			<div class="row welcome_inner">
 				<div class="col-lg-6">
 					<div class="welcome_text">
-						<h4>About Myself</h4>
+						<h4>Sobre</h4>
 						<p>Hi, My name is Shaikh Minhaj, I am a Full Stack Developer. I am a Final year Student Pursuing
 							a Bachelor of Computer Applications (BCA) @ MGM College of CS & IT Nanded. My interests
 							include Full Stack Web Development, Web Designing, coding, Learning New Technologies etc. I
@@ -111,25 +93,25 @@
 
 						</p>
 						<div class="row">
-							<div class="col-md-4">
+							<!-- <div class="col-md-4">
 								<div class="wel_item">
 									<i class="lnr lnr-database"></i>
 									<h4>30k+</h4>
 									<p>Lines Code</p>
 								</div>
-							</div>
+							</div> -->
 							<div class="col-md-4">
 								<div class="wel_item">
 									<i class="lnr lnr-book"></i>
-									<h4>50+</h4>
-									<p>Total Projects</p>
+									<h4>20+</h4>
+									<p>Projetos</p>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<div class="wel_item">
 									<i class="lnr lnr-users"></i>
 									<h4>2+</h4>
-									<p>Experience</p>
+									<p>Experiência</p>
 								</div>
 							</div>
 						</div>
@@ -137,38 +119,38 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="tools_expert">
-						<h3>Tools Expertness</h3>
+						<h3>Ferramentas Principais</h3>
 						<div class="skill_main">
 							<div class="skill_item">
-								<h4>HTML, CSS, JS <span class="counter">85</span>%</h4>
+								<h4>Kubernetes, Docker <span class="counter">85</span>%</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
 										aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>Java, Spring Boot, Spring Framework etc. <span class="counter">90</span>%</h4>
+								<h4>Linux <span class="counter">90</span>%</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
 										aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>MYSQL<span class="counter">70</span>%</h4>
+								<h4>MySQL, Postgres <span class="counter">70</span>%</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
 										aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>Development<span class="counter">95</span>%</h4>
+								<h4>CI/CD, Git <span class="counter">95</span>%</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
 										aria-valuemax="100"></div>
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>DSA<span class="counter">75</span>%</h4>
+								<h4>Python, Django <span class="counter">75</span>%</h4>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
 										aria-valuemax="100"></div>
@@ -183,19 +165,10 @@
 	<!--================End Welcome Area =================-->
 
 	<!--================Projects Area =================-->
-	<section class="projects_area p_120">
+	<section id="projects" class="projects_area p_120">
 		<div class="container">
 			<div class="main_title">
-				<h2>Our Recent Completed Projects</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
-			</div>
-			<div class="projects_fillter">
-				<ul class="filter list">
-					<li class="active" data-filter="*"><a href="#">All Categories</a></li>
-					<li data-filter=".brand"><a href="#">Branding</a></li>
-					<li data-filter=".work"><a href="#">Creative Work </a></li>
-					<li data-filter=".web"><a href="#">Web Design</a></li>
-				</ul>
+				<h2>Principais Projetos</h2>
 			</div>
 			<div class="projects_inner row">
 				<div class="col-lg-4 col-sm-6 brand web">
@@ -274,29 +247,32 @@
 		<div class="container">
 			<div class="row footer_inner">
 				<div class="col-lg-5 col-sm-6">
-					<aside class="f_widget ab_widget">
-						<div class="f_title">
-							<h3>About Me</h3>
-						</div>
-						<p>Hi, My name is Shaikh Minhaj, I am a Full Stack Developer. I am a Final year Student Pursuing
-							a Bachelor of Computer Applications (BCA) @ MGM College of CS & IT Nanded. My interests
-							include Full Stack Web Development, Web Designing, coding, Learning New Technologies etc. I
-							am very passionate about improving my coding skills & developing applications & websites.
-							Working for myself to improve my skills.
-
-						</p>
-						<p>
-							Copyright &copy;
-							<script>document.write(new Date().getFullYear());</script> All rights reserved | This
-							template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-								href="https://github.com/minhaj-313" target="_blank">minhaj-313</a>
-
-						</p>
+					<aside class="f_widget ">
+						<div class="row">
+							<div class="">
+								<div class="contact_info">
+									<div class="info_item">
+										<i class="lnr lnr-home"></i>
+										<h6>California, United States</h6>
+										<p>Santa monica bullevard</p>
+									</div>
+									<div class="info_item">
+										<i class="lnr lnr-phone-handset"></i>
+										<h6><a href="#">00 (440) 9865 562</a></h6>
+										<p>Mon to Fri 9am to 6 pm</p>
+									</div>
+									<div class="info_item">
+										<i class="lnr lnr-envelope"></i>
+										<h6><a href="#">support@colorlib.com</a></h6>
+										<p>Send us your query anytime!</p>
+									</div>
+								</div>
+							</div>
 					</aside>
 				</div>
-				<div class="col-lg-5 col-sm-6">
+				<div class="col-lg-4 col-sm-4">
 					<aside class="f_widget news_widget">
-						<div class="f_title">
+						<!-- <div class="f_title">
 							<h3>Newsletter</h3>
 						</div>
 						<p>Stay updated with our latest trends</p>
@@ -312,15 +288,14 @@
 								</div>
 								<div class="mt-10 info"></div>
 							</form>
-						</div>
+						</div> -->
 					</aside>
 				</div>
 				<div class="col-lg-2">
 					<aside class="f_widget social_widget">
 						<div class="f_title">
-							<h3>Follow Me</h3>
+							<h3>Me siga</h3>
 						</div>
-						<p>Let us be social</p>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -333,10 +308,6 @@
 		</div>
 	</footer>
 	<!--================End Footer Area =================-->
-
-
-
-
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
